web-infras/parser/tests/fixtures/esprima/es2020/optional-chaining/optional-chaining-static-property/output.txt
[SyntaxError]: Constructors in/after an Optional Chain are not allowed. (3,6)
3|new a?.b.c
 |    ^
[SyntaxError]: Constructors in/after an Optional Chain are not allowed. (4,8)
4|new a.b?.c
 |      ^
